--- a/assets/stylesheet.css
+++ b/assets/stylesheet.css
@@ -37,7 +37,7 @@ nav {
 .jumbotron {
     padding: 2rem 1rem;
     margin-bottom: 2rem;
-    background-color: #e9ecef;
+    background-color: rgba(235,248,247,1);
     border-radius: .3rem;
 }
 
@@ -47,5 +47,10 @@ nav {
 }
 
 .forecastCards {
-    background-color: #e9ecef;
+    background-color: rgba(235,248,247,1);
+}
+
+#smallIcon {
+    max-height: 1.75em;
+    max-width: 1.75em;
 }
